--- a/assets/css/homenet-bootstrap4.css
+++ b/assets/css/homenet-bootstrap4.css
@@ -3146,6 +3146,45 @@ a.focus-flip:focus {
     height: 70vh;
 }
 
+/*** SWIPER GALLERY ***/
+
+/*
+.swiper-portfolio.no-link a{
+cursor: default !important;
+}
+*/
+
+/* Swiper Buttons */
+
+.swiper-button-prev-portfolio, .swiper-button-next-portfolio {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+@media (max-width: 767px) {
+    .swiper-button-prev-portfolio, .swiper-button-next-portfolio {
+        display: none;
+    }
+}
+
+.swiper-button-prev-portfolio i, .swiper-button-next-portfolio i {
+    font-size: 1.6rem;
+    color: var(--black_default);
+}
+
+.swiper-button-next-portfolio {
+    right: 0;
+}
+
 /*** TESTIMONIALS SECTION ***/
 .testimonials {
     position: relative;
