--- a/assets/css/homenet-bootstrap4.css
+++ b/assets/css/homenet-bootstrap4.css
@@ -3146,13 +3146,8 @@ a.focus-flip:focus {
     height: 70vh;
 }
 
-/*** SWIPER GALLERY ***/
+/*** SWIPER STUFF ***/
 
-/*
-.swiper-portfolio.no-link a{
-cursor: default !important;
-}
-*/
 
 /* Swiper Buttons */
 
