--- a/assets/css/homenet-bootstrap4.css
+++ b/assets/css/homenet-bootstrap4.css
@@ -1680,8 +1680,8 @@ a.button-default-white-2:hover {
 /******** INFO CONTENT PAGE ********/
 
 /* Overflow correction for animations in full page width */
-.content-page.full {
-    overflow-x: hidden;
+.content-page.full section .row {
+    overflow: hidden;
 }
 
 /* General Style for List group Side Nav for Info Content Pages */
@@ -2876,11 +2876,6 @@ a.focus-flip:focus {
     justify-content: flex-end;
 }
 
-.two-slides .row,
-.two-grid-info .row {
-    overflow: hidden;
-}
-
 @media (max-width: 1440px) {
     .two-slides .content-wrapper {
         width: 550px;
@@ -3215,6 +3210,19 @@ a.focus-flip:focus {
     background-color: var(--homenet-light-orange);
     width: 19px;
 
+}
+
+/* Majestic Lightbox Arrows */
+
+.mfp-arrow {
+    border-radius: 100%;
+}
+.mfp-gallery .mfp-arrow {
+background-color: rgba(133, 195, 174, 0.5) !important;
+}
+
+.mfp-counter {
+font-family: var(--font-second);
 }
 
 /* Swiper other */
