--- a/assets/css/rentall-bootstrap-only.css
+++ b/assets/css/rentall-bootstrap-only.css
@@ -160,6 +160,22 @@ p {
     border-bottom: 1px solid #eee
 }
 
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+th {
+    text-align: left
+}
+
+.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+    padding: 8px;
+    line-height: 1.42857143;
+    vertical-align: top;
+    border-top: 1px solid #ddd;
+}
+
 ol, ul {
     margin-top: 0;
     margin-bottom: 10px
