--- a/assets/css/homenet-global.css
+++ b/assets/css/homenet-global.css
@@ -301,6 +301,7 @@ Listing Page
     margin: 0px 0px 10px 0px;
     letter-spacing: -0.5px;
     color: #373737;
+    font-weight: 600;
 }
 
 .listing-page h2.location {
@@ -749,6 +750,7 @@ Profile Pages
     color: #fd5721;
     letter-spacing: -0.3px;
     margin: 6px 0px;
+    font-weight: 600;
 }
 
 .profile-page h3 {
@@ -765,6 +767,7 @@ Profile Pages
     letter-spacing: 0.1px;
     margin: 0px 0px;
     display: inline;
+    font-weight: 600;
 }
 
 .profile-page .since {
@@ -911,6 +914,7 @@ Building Page
     margin: 0px 0px 5px 0px;
     letter-spacing: -1.3px;
     color: #373737;
+    font-weight: 600;
 }
 
 .building-page h2 {
@@ -1143,6 +1147,7 @@ District Page
     letter-spacing: 0.0px;
     color: #373737;
     text-transform: uppercase;
+    font-weight: 600;
 }
 
 .district-page .info_nav {
