--- a/assets/css/homenet-listing-banner.css
+++ b/assets/css/homenet-listing-banner.css
@@ -28,52 +28,85 @@
         justify-content: center !important;
     }
 
-.listing-banner-container .side-img img,
-.listing-banner-container *:before,
-.listing-banner-container *:after {
-    -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 3s; /* Firefox < 16 */
-        -ms-animation: fadein 3s; /* Internet Explorer */
-         -o-animation: fadein 3s; /* Opera < 12.1 */
-            animation: fadein 3s;
-}
-.listing-banner-container .main-img
- {
-    -webkit-animation: fadein 2.5s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 2.5s; /* Firefox < 16 */
-        -ms-animation: fadein 2.5s; /* Internet Explorer */
-         -o-animation: fadein 2.5s; /* Opera < 12.1 */
-            animation: fadein 2.5s;
-}
+    .listing-banner-container .side-img img,
+    .listing-banner-container *:before,
+    .listing-banner-container *:after {
+        -webkit-animation: fadein 3s;
+        /* Safari, Chrome and Opera > 12.1 */
+        -moz-animation: fadein 3s;
+        /* Firefox < 16 */
+        -ms-animation: fadein 3s;
+        /* Internet Explorer */
+        -o-animation: fadein 3s;
+        /* Opera < 12.1 */
+        animation: fadein 3s;
+    }
 
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
+    .listing-banner-container .main-img {
+        -webkit-animation: fadein 2.5s;
+        /* Safari, Chrome and Opera > 12.1 */
+        -moz-animation: fadein 2.5s;
+        /* Firefox < 16 */
+        -ms-animation: fadein 2.5s;
+        /* Internet Explorer */
+        -o-animation: fadein 2.5s;
+        /* Opera < 12.1 */
+        animation: fadein 2.5s;
+    }
 
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
+    @keyframes fadein {
+        from {
+            opacity: 0;
+        }
 
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
+        to {
+            opacity: 1;
+        }
+    }
 
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
+    /* Firefox < 16 */
+    @-moz-keyframes fadein {
+        from {
+            opacity: 0;
+        }
 
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
+        to {
+            opacity: 1;
+        }
+    }
+
+    /* Safari, Chrome and Opera > 12.1 */
+    @-webkit-keyframes fadein {
+        from {
+            opacity: 0;
+        }
+
+        to {
+            opacity: 1;
+        }
+    }
+
+    /* Internet Explorer */
+    @-ms-keyframes fadein {
+        from {
+            opacity: 0;
+        }
+
+        to {
+            opacity: 1;
+        }
+    }
+
+    /* Opera < 12.1 */
+    @-o-keyframes fadein {
+        from {
+            opacity: 0;
+        }
+
+        to {
+            opacity: 1;
+        }
+    }
 
     .img-frame {
         height: 100%;
@@ -104,44 +137,46 @@
     }
 
     .vr-button {
-height: 11vw;
-    width: 11vw;
-    max-width: 82px;
-    max-height: 82px;
-    background-color: rgb(255 255 255 / 0.75);
-    position: absolute;
-    margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    border-radius: 50%;
-      transition: 0.25s;
-z-index: 10;
-}
+        height: 11vw;
+        width: 11vw;
+        max-width: 82px;
+        max-height: 82px;
+        background-color: rgb(255 255 255 / 0.75);
+        position: absolute;
+        margin: auto;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        border-radius: 50%;
+        transition: 0.25s;
+        z-index: 10;
+    }
 
     .vr-button .vr-icon {
-    position: relative;
-top: 27%;
-    left: 17%;
-    width: 68%;
-      transition: 0.20s;
-}
-.vr-button:active .vr-icon {
-width: 46%;
-    top: 35%;
-    left: 28%;
-    opacity: 0.7;
-}
+        position: relative;
+        top: 27%;
+        left: 17%;
+        width: 68%;
+        transition: 0.20s;
+    }
+
+    .vr-button:active .vr-icon {
+        width: 46%;
+        top: 35%;
+        left: 28%;
+        opacity: 0.7;
+    }
+
     .vr-button:active {
-height: 300px;
-    width: 300px;
-    max-width: 50vw;
-    max-height: 50vw;
-    background-color: rgb(255 255 255 / 0);
-    opacity: 0;
-}
+        height: 300px;
+        width: 300px;
+        max-width: 50vw;
+        max-height: 50vw;
+        background-color: rgb(255 255 255 / 0);
+        opacity: 0;
+    }
 
     /* Responsive widths */
     @media (max-width: 550px) {
@@ -166,17 +201,19 @@ height: 300px;
             flex-wrap: wrap;
         }
 
-        .side-img.image2{
-            order:2;
+        .side-img.image2 {
+            order: 2;
             flex-basis: 50%;
             height: 40vw;
         }
-        .side-img.image3{
-            order:3;
+
+        .side-img.image3 {
+            order: 3;
             flex-basis: 50%;
             height: 40vw;
         }
-        .side-img.image2 .img-frame{
+
+        .side-img.image2 .img-frame {
             padding-right: 1px;
         }
 
@@ -185,8 +222,9 @@ height: 300px;
             display: none !important;
             background-image: none !important;
         }
-            .vr-button:hover {
-        height: 11vw;
+
+        .vr-button:hover {
+            height: 11vw;
             width: 11vw;
         }
 
@@ -197,6 +235,7 @@ height: 300px;
             max-height: 550px;
             min-height: 450px
         }
+
         .main-img {
             margin: 0 1px;
         }
@@ -215,6 +254,7 @@ height: 300px;
             flex: 0 0 auto;
             min-width: 555px;
         }
+
         .side-img {
             -webkit-box-flex: 0;
             -ms-flex: 0 0 auto;
@@ -230,26 +270,30 @@ height: 300px;
         .listing-banner-container {
             max-height: 625px;
         }
+
         .img-frame {
             height: 625px;
             max-height: inherit;
         }
+
         .main-img,
             {
             width: auto;
             max-width: none;
         }
+
         .main-img img {
             min-width: 555px;
             width: auto;
         }
+
         .listing-banner.have-vr::after {
             background: url(../svg/listing/vr.svg);
         }
 
         .listing-banner.have-vr::after {
             height: 13.5%;
-            width: 102px;
+            width: 111px;
             min-height: 69px;
             z-index: 2;
         }
@@ -260,49 +304,51 @@ height: 300px;
         .listing-banner-container {
             max-height: 60vh;
         }
+
         .img-frame {
             height: 60vh;
             max-height: inherit;
         }
+
         .main-img img {
-            min-width: 600px;
+            min-width: 100%;
         }
+        .main-img {
+            min-width: 695px;
+        }
+
         .side-img img {
             width: 100%;
         }
+
         .side-img {
-            width: 600px;
+            width: 695px;
         }
     }
 
     .listing-banner.featured::before {
-    background: url(../svg/listing/featured.svg);
-}
+        background: url(../svg/listing/featured.svg);
+    }
+
     .listing-banner.recommended::before {
-    background: url(../svg/listing/recommended.svg);
-}
+        background: url(../svg/listing/recommended.svg);
+    }
 
-.listing-banner.featured::before,
-.listing-banner.recommended::before,
-.listing-banner.have-vr::after {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    content: ' ';
-    background-size: contain;
-    background-repeat: no-repeat;
-}
+    .listing-banner.featured::before,
+    .listing-banner.recommended::before,
+    .listing-banner.have-vr::after {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        content: ' ';
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
 
-.listing-banner.featured::before,
-.listing-banner.recommended::before {
-height: 18%;
-    width: 150px;
-    min-height: 92px;
-    z-index: 3;
-}
-
-
-
-
-
-
+    .listing-banner.featured::before,
+    .listing-banner.recommended::before {
+        height: 18%;
+        width: 150px;
+        min-height: 92px;
+        z-index: 3;
+    }
